...

    let columns = [GridItem(.adaptive(minimum: 100), spacing: 2)]

    var body: some View {
        ZStack {
            VStack(spacing: 20) {
                Text("For Your Approval")
                    .font(.title).bold()
                    .foregroundColor(.white)
                    .padding(.top, 40)

                if pendingAssets.isEmpty {
                    Spacer()
...
